Capitulo de reductionLoop y cambio de algunos \Rightarrow a \Longrightarrow

--- a/languages.tex
+++ b/languages.tex
@@ -35,10 +35,10 @@
 \definecolor{isarpurple}{HTML}{9966ff}
 \definecolor{isarlightred}{HTML}{ff5050}
 \lstdefinelanguage{isabelle}{
-    keywords=[1]{abbreviation,by,contractLoop,corollary,datatype,definition,done,env,evalBoudnAuction,fun,function,goal,handleChoose,handleDeposit,inputList,lemma,newstate,payments,proof,record,reduce,reduced,sta,termination,theorem,theory,tra,trec,type_synonym,using,warnings},
+    keywords=[1]{abbreviation,by,contractLoop,corollary,datatype,definition,done,env,evalBoudnAuction,fun,function,goal,handleChoose,handleDeposit,inputList,lemma,newstate,m,ps,qs,terms,payments,proof,record,reduce,reduced,sta,termination,theorem,theory,tra,trec,type_synonym,using,warnings,fixSta,reduceWarns,pays,curState,cont},
     morecomment=[s]{(*}{*)}, % chktex 9
     keywordstyle=[1]\bfseries\color{isarblue},
-    keywords=[2]{a,and,applyWarn,assumes,begin,cont,end,imports,newState,p,ps,shows,where},
+    keywords=[2]{a,and,applyWarn,assumes,begin,cont,end,imports,newState,p,shows,where},
     keywordstyle=[2]\bfseries\color{isargreen},
     keywords=[3]{O,SOME,else,if,in,let,of,then},
     keywordstyle=[3]\color{isarblue},
