--- a/actus-techspecs-format.tex
+++ b/actus-techspecs-format.tex
@@ -31,12 +31,12 @@
 	\textbf{State} & \textbf{Initialization per $t_0$} & \textbf{Comments} \\
 	\hline
 	\endfirsthead
-	\multicolumn{3}{c}{\textit{Continua desde la página anterior}} \\
+	\multicolumn{3}{c}{\textit{Continúa desde la página anterior}} \\
 	\hline
 	\textbf{State} & \textbf{Initialization per $t_0$} & \textbf{Comments} \\
 	\hline
 	\endhead
-	\hline \multicolumn{3}{r}{\textit{Continua en la siguiente página}} \\
+	\hline \multicolumn{3}{r}{\textit{Continúa en la siguiente página}} \\
 	\endfoot
 	\endlastfoot
 }{%
